--- a/files/luci/i18n/chinadns.zh-cn.po
+++ b/files/luci/i18n/chinadns.zh-cn.po
@@ -31,5 +31,5 @@ msgstr "国内路由表"
 msgid "Upstream Servers"
 msgstr "上游服务器"
 
-msgid "Use commas to separate multiple ip address"
-msgstr "多个IP地址使用逗号隔开"
+msgid "List of <abbr title=\"Domain Name System\">DNS</abbr> servers to forward requests"
+msgstr "指定上游<abbr title=\"Domain Name System\">DNS</abbr>，可使用#代替:以自定义上游DNS的查询端口。"
